<resources>
    <string name="app_name">Hearme</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_explore">Explore</string>
    <string name="title_library">Library</string>
    <string name="title_profile">Profile</string>
    <string name="podcasts_shows">Podcasts &amp; Shows</string>
</resources>